--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.1.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.2",
+    "mini-css-extract-plugin": "^1.3.9",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
