--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "webpack serve --mode development",
+    "start": "node server.js",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "build": "webpack",
-    "bundle:report": "source-map-explorer dist/*.js"
+    "bundle:report": "source-map-explorer dist/*.js",
+    "heroku-postbuild": "webpack -p"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "express": "^4.17.1",
     "firebase": "^8.2.9",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
@@ -34,6 +37,8 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.22.0",
+    "favicons": "^6.2.1",
+    "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "mini-css-extract-plugin": "^1.3.9",
