--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.1",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^7.0.2",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.22.0",
